--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,130 +7,155 @@
     tools:context=".MainActivity">
 
 
-
     <TextView
         android:id="@+id/nameTextView"
+        style="@style/Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text = "이름"
+        android:text="이름"
         android:textStyle="bold"
-        style="@style/Title"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-  />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/nameValueTextView"
+        style="@style/Value"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:ellipsize="end"
         android:layout_marginEnd="36dp"
+        android:ellipsize="end"
         android:maxLines="1"
-        style="@style/Value"
+        android:text="adjklfakjdflkajfdlkjflkaalfkdjafkadalfkjdlkfjaajfdlkj"
         app:layout_constraintBaseline_toBaselineOf="@id/nameTextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/guideLine"/>
-/>
+        app:layout_constraintStart_toStartOf="@id/guideLine" />
+    />
 
     <TextView
         android:id="@+id/birthdateTextView"
+        style="@style/Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text = "생년월일"
+        android:text="생년월일"
         android:textStyle="bold"
-        style="@style/Title"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/nameTextView"
-/>
+        app:layout_constraintTop_toBottomOf="@id/nameTextView" />
 
     <TextView
         android:id="@+id/birthdateValueTextView"
+        style="@style/Value"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        style="@style/Value"
         android:layout_marginEnd="36dp"
         android:gravity="end"
-        app:layout_constraintStart_toStartOf="@id/guideLine"
         app:layout_constraintBaseline_toBaselineOf="@id/birthdateTextView"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/guideLine" />
 
     <TextView
         android:id="@+id/bloodTextView"
+        style="@style/Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text = "혈액형"
-        android:textStyle="bold"
         android:layout_marginEnd="36dp"
-        style="@style/Title"
+        android:text="혈액형"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/birthdateTextView"
-        />
+        app:layout_constraintTop_toBottomOf="@id/birthdateTextView" />
 
     <TextView
         android:id="@+id/bloodValueTextView"
+        style="@style/Value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="36dp"
-        style="@style/Value"
         app:layout_constraintBaseline_toBaselineOf="@id/bloodTextView"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/contactTextView"
+        style="@style/Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text = "비상 연락처"
+        android:text="비상 연락처"
         android:textStyle="bold"
-        style="@style/Title"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bloodTextView"
-        />
+        app:layout_constraintTop_toBottomOf="@id/bloodTextView" />
 
     <TextView
         android:id="@+id/contactValueTextView"
+        style="@style/Value"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:maxLines="1"
+        android:layout_marginEnd="8dp"
+        android:text="919-19dfdsdfss19-3393"
+        app:layout_constraintStart_toStartOf="@id/guideLine"
+        app:layout_constraintBaseline_toBaselineOf="@id/contactTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/contactIcon" />
+
+    <ImageView
+        android:id="@+id/contactIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/Value"
-        android:layout_marginEnd="36dp"
-        app:layout_constraintBaseline_toBaselineOf="@id/contactTextView"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:src="@drawable/baseline_local_phone_24"
+        app:layout_constraintBottom_toBottomOf="@id/contactValueTextView"
+        app:layout_constraintEnd_toEndOf="@id/nameValueTextView"
+        app:layout_constraintTop_toTopOf="@id/contactValueTextView"/>
 
     <TextView
         android:id="@+id/cautionTextView"
+        style="@style/Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text = "주의사항"
+        android:text="주의사항"
         android:textStyle="bold"
-        style="@style/Title"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/contactTextView"
-        />
+        app:layout_constraintTop_toBottomOf="@id/contactTextView" />
 
     <TextView
         android:id="@+id/cautionValueTextView"
+        style="@style/Value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="36dp"
-        style="@style/Value"
         app:layout_constraintBaseline_toBaselineOf="@id/cautionTextView"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideLine"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.4"
-/>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideLine"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.4" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/goActivityInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="true"
         android:layout_margin="36dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:clickable="true"
         android:src="@drawable/baseline_mode_edit_24"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/deleteButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="36dp"
+        android:clickable="true"
+        android:src="@drawable/baseline_delete_24"
+        app:layout_constraintBottom_toTopOf="@id/goActivityInput"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <androidx.constraintlayout.helper.widget.Layer
+        android:id="@+id/emergencyContactLayer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="contactIcon,contactValueTextView"
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
